# graphics_programming_001

./: README.md
opengl01/: CMakeLists.txt  run.sh
opengl01/.cache/clangd/index/: glad.c.CA2809E7F73B4458.idx  glad.c.DDA8C3D012D6DABC.idx  glad.h.9064EE06A478A2D5.idx  glad.h.FBCE4D5E5D25DFFE.idx  khrplatform.h.08F2A68612BA6E9A.idx  khrplatform.h.AD7B478CC14BC803.idx  main.cpp.45DE8CC0DAA246BC.idx  main.cpp.EB921B4E56BDF5D2.idx
opengl01/include/glad/: glad.h
opengl01/src/: fragment.glsl  glad.c  main.cpp  shader.glsl
